website/src/App.css
@font-face {
    font-family: "Cinzel";
    src: url("fonts/Cinzel-VariableFont_wght.ttf")
}

@font-face {
    font-family: "Noto Sans";
    src: url("fonts/NotoSans-VariableFont_wdth,wght.ttf")
}

@font-face {
    font-family: "Roboto";
    src: url("fonts/Roboto-VariableFont_wdth,wght.ttf")
}

@font-face {
    font-family: "Roboto Mono";
    src: url("fonts/RobotoMono-VariableFont_wght.ttf")
}

:root{
    --primary-red: #BA1514;
    --primary-gold: #C2A340;
    --secondary-gold: #F4ECCE;
}

div.header {
    background-color: var(--secondary-gold);
    border-bottom: 1px solid #dee2e6;
}

h1.fancy-font {
    font-family: 'Cinzel', serif;
    color: var(--primary-red);
}

.red-link{
    color: var(--primary-red) !important;
}

body {
  font-family: 'Noto Sans', 'Arial', sans-serif;
}

.toolbar {
    width: 87vw;
    margin-left: auto;
    margin-right: auto;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
    position: sticky;
    top: 0;
    z-index: 100;
    background-color: #fff;
    padding-bottom: 1rem;
    margin-bottom: 0.5rem;
    border-bottom: 1px solid black;
}

.menuContent {
    width: 87vw;
    height: 69vh;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 1.5rem;
}

.MuiBox-root .pathElement {
    margin: 0;
    padding: 0 10px 0 10px;
    text-transform: none;
    display: flex;
    text-align: left;
    height: 2rem;
    align-items: center;
    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
    font-size: 1rem;
    font-weight: 500;
    letter-spacing: 0.02857em;
}

.MuiBox-root .pathButton {
    text-transform: none;
    text-decoration: underline;
}

.MuiBox-root .pathButton:disabled {  /* overrides transparency from Mui-disabled */
    color: black;
}

.MuiBox-root.actionButton, .MuiButtonBase-root.actionButton {
    color: #1976d2;
}

.MuiBox-root.actionButton.altColor, .MuiButtonBase-root.actionButton.altColor {
    color: #19a942;
}

.MuiBox-root.negActionButton, .MuiButtonBase-root.negActionButton {
    color: #f00;
}

.MuiButton-contained.adminMenuButton {
    border: 1px solid black;
    text-transform: none;
    font-size: 2rem;
}

span.toolbarTitle, .MuiTypography-root.toolbarTitle {
    margin-left: 1rem;
    margin-top: 0.5rem;
    text-align: center;
}

.MuiButton-contained.menuFunctionButton {  /* overrides React MUI styles */
    border: 1px solid black;
    height: 2rem;
    text-transform: none;
    margin-right: 1rem;
    margin-top: 0.5rem;
    width: fit-content;
}

.noMarginRight {
    margin-right: 0
}

.menuFunctionButton.noMarginRight {  /* overrides React MUI styles */
    margin-right: 0
}

.MuiButton-contained.menuButton {
    border: 1px solid black;
    text-transform: none;
    font-size: 1rem;
    height: 2rem;
    width: max-content;
    margin-left: 0.7rem;
    padding: 0 10px 0 10px;
}

.fileIcon {
    color: black;
    font-size: 25px;
    margin: 0.5rem 0.5rem 0.5rem 0.2rem;  /* 0.2rem left */
}

.MuiButton-text.resultButton {
    padding: 0;
    justify-content: left;
    text-transform: none;
}

.zooming-tool {
    display: flex;
    flex-direction: column;
    position: fixed;  /* float over page */
    margin-left: 0.5rem;
    margin-top: 0.5rem;
    z-index: 2;
}

.zooming-tool:hover {
    cursor: default;
}

.zooming-tool .zooming-IconButton {  /* zoom buttons within zooming tool */
    margin-bottom: 10px;
    padding: 0;
}

.zooming-IconButton .zoom-icon {
    width: 1.7rem;
    height: 1.7rem;
}

.pageImageContainer {
    display: flex;
    position: relative;
    height: 69vh;
    width: 100%;
    overflow: scroll;
    border: 1px solid grey;
}

.pageImageContainer:hover {
    cursor: crosshair;
}

.pageImageContainer .pageImage {  /* pageImage within a pageImageContainer */
    display: block;
    margin: auto;
    border: 1px solid black;
    object-fit: contain;
    user-select: none;
}

.pageNumberInput {
    width: 2rem;
    height: 1rem;
    font-size: 1rem;
    text-align: center;
    margin-right: 10px;
}

.editingSection {
    display: flex;
    flex-direction: column;
    max-width: 100%;
    margin-bottom: 20px;
}

.editingLine {
    max-width: 100%;
}

/*
input field within a TextField used within Autocomplete
cannot be styled with props, interferes with functioning of Autocomplete
*/
.MuiAutocomplete-root .MuiTextField-root .MuiInputBase-root {
    height: 2rem;
}

.MuiFormControl-root.simpleInput {
    margin-bottom: 0.3rem;
    margin-top: 0.5rem;
}

.MuiFormControl-root.simpleDropdown {
    margin-bottom: 0.3rem;
    margin-top: 0.5rem;
    width: 100%;
}

.MuiFormControl-root.hourInput {
    width: 6rem;
}

.MuiFormControl-root.borderTop {
    padding-top: 0.5rem;
    border-top: 1px solid black;
}

/*
  File Explorer table formatting
*/

.MuiTableRow-head.explorerHeaderRow {
    height: 2rem;
    background-color: #f5f5f5;
    border-top: 1px solid #e0e0e0;
    border-bottom: 1px solid #e0e0e0;
}

.MuiTableRow-root.explorerRow {
    height: 4rem;
    background-color: #ffffff;
    border-top: 1px solid #e0e0e0;
    border-bottom: 1px solid #e0e0e0;
}

.MuiTableRow-root.explorerRow:hover {
    background-color: #d7d7d7 !important;
}

.MuiTableRow-root.explorerRow.targeted {
    background-color: #d7d7d7 !important;
}

.MuiTableRow-root.staticFileRow {
    background-color: #C4DCF4FF;
    height: 3rem;
}

.MuiTableCell-root.MuiTableCell-head.headerCell {
    font-family: 'Noto Sans', 'Arial', sans-serif;
    height: inherit;
    padding: 16px;
}

.MuiTableCell-root.explorerCell {
    height: inherit;
    background-color: inherit;
    border-left: 1px solid #aaa;
    font-size: 1rem;
}

.MuiTableCell-root.MuiTableCell-body.explorerCell {
    padding-top: 0;
    padding-bottom: 0;
    border-bottom: 0;
}

.explorerCell.errorCell {
    background-color: var(--primary-red);
    color: #ffffff;
}

.explorerCell.infoCell {
    background-color: var(--secondary-gold);
}

.explorerCell.successCell {
    background-color: inherit;
}

.explorerCell.waitingCell {
    background-color: inherit;
}

.stateCell .stateBox {
    overflow: hidden;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: left;
}

.MuiTableCell-root.optionsCell {
    padding: 0;
    width: 1%;
}

.MuiTableCell-root.thumbnailCell {
    border-left: 0;
    width: 5%;
    text-align: center;
}

.MuiTableCell-root.nameCell {
    border-left: 1px solid #e0e0e0;
    padding-left: 0;
    width: 30%;
    text-align: left;
}

.MuiTableCell-root.nameCell:hover {
    font-weight: bold;
}

.MuiTableCell-root.staticNameCell {
    border-left: 0;
    width: 30%;
    text-align: left;
}

.MuiTableCell-root.detailsCell {
    width: 13%;
    text-align: left;
}

.MuiTableCell-root.sizeCell {
    width: 8%;
    text-align: right;
    font-family: "Roboto Mono", monospace;
}

.MuiTableCell-root.dateCreatedCell {
    width: 12%;
    text-align: right;
}

.MuiTableCell-root.dateOCRCell {
    width: 12%;
    text-align: left;
}

.MuiTableCell-root.stateCell {
    width: 18%;
    text-align: left;
}

/*
  Layout boxes list table formatting
*/

.MuiTableRow-head.layoutHeaderRow {
    border-bottom: 1px solid #aaa;
}

.MuiTableCell-head.layoutHeaderCell {
    height: 1rem;
    background-color: #f5f5f5;
    border-bottom: 1px solid #aaa;
}

.MuiTableRow-root.layoutRow {
    border-bottom: 1px solid #aaa;
}

/* Color odd rows, ensures recolor when table is re-ordered */
.MuiTableRow-root.layoutRow:nth-child(odd) {
    background-color: #ffffff;
}

/* Color even rows, ensures recolor when table is re-ordered */
.MuiTableRow-root.layoutRow:nth-child(even) {
    background-color: #f5f5f5;
}

.MuiTableCell-root.layoutCell {
    height: 1rem;
    border-bottom: 1px solid #aaa;
}

span {
  font-size: 1rem;
  white-space: pre-line;
}

.link:hover {
  cursor: pointer;
}

img:hover {
  transition: all 0.3s ease-in-out;
}

.fancy-font {
  font-family: 'Cinzel', serif;
  font-weight: 500;
  margin: 0;
}

.no-text-select {
    -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
    -moz-user-select: none; /* Old versions of Firefox */
    -ms-user-select: none; /* Internet Explorer/Edge */
    user-select: none; /* Non-prefixed version, currently
                          supported by Chrome, Edge, Opera and Firefox */
}

